--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+    background-color: blanchedalmond;
+    margin: 0;
+    padding: 0;
+}
